created picture folder to clean up

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <div id="projecttext" class="flex-container">
  
 
-                <a href="https://connor-durham.github.io/ChrisConnorLLoydDylan/" ><img src="band.jpg" class="projectpics" title="band" alt="band"></a>
+                <a href="https://connor-durham.github.io/ChrisConnorLLoydDylan/" ><img src="Pictures/band.jpg" class="projectpics" title="band" alt="band"></a>
 
 
-                <a href="https://connor-durham.github.io/Train-Scheduler/" ><img src="train.jpg" class="projectpics" title="train" alt="train"></a>
+                <a href="https://connor-durham.github.io/Train-Scheduler/" ><img src="Pictures/train.jpg" class="projectpics" title="train" alt="train"></a>
 
                 
-                <a href="https://connor-durham.github.io/Word-Guess-Game/" ><img src="hangman.jpg" class="projectpics" title="hangman" alt="hangman"></a>
+                <a href="https://connor-durham.github.io/Word-Guess-Game/" ><img src="Pictures/hangman.jpg" class="projectpics" title="hangman" alt="hangman"></a>
 
         </div>
 
@@ -52,7 +52,7 @@
         </div>
 
         <div id="resumetext" class="flex-container">
-                <img src="resume.jpg" id="resumepic"></img>
+                <img src="Pictures/resume.jpg" id="resumepic"></img>
          </div>
 
         <div class="projects" class="flex-container">
@@ -62,7 +62,7 @@
 
         <div id="githubtext" class="flex-container">
           
-                <a href="https://github.com/connor-durham" ><img src="github.svg" id="githubpic" title="github" alt="github"></a>
+                <a href="https://github.com/connor-durham" ><img src="Pictures/github.svg" id="githubpic" title="github" alt="github"></a>
 
 
 
@@ -75,7 +75,7 @@
         </div>
 
         <div id="linkedintext" class="flex-container">
-                <a href="https://www.linkedin.com/in/connordurham/" ><img src="linkedin.png" id="linkedinpic" title="linkedin" alt="linkedin"></a>
+                <a href="https://www.linkedin.com/in/connordurham/" ><img src="Pictures/linkedin.png" id="linkedinpic" title="linkedin" alt="linkedin"></a>
 
         </div>
 
